--- a/assets/less/supersized.core.less
+++ b/assets/less/supersized.core.less
@@ -14,10 +14,29 @@ body { background:#111; height:100%; }
 img{ border:none; }
 */
 
-#supersized-loader { position:absolute; top:50%; left:50%; z-index:0; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background:url(../img/progress.gif) no-repeat center center;}
+@back-slider: #111;
+@progress 	: '../img/progress.gif';
 
-#supersized { position:fixed; left:0; top:0; overflow:hidden; z-index:-999; height:100%; width:100%; }
-#supersized img{ width:auto; height:auto; position:relative; outline:none; border:none; }
+#supersized-loader { position:absolute; top:50%; left:50%; z-index:0; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background:url(@progress) no-repeat center center;}
 
-#supersized a { z-index:-30; position:fixed; overflow:hidden; top:0; left:0; width:100%; height:100%; background:#111; display:block; }
-#supersized a.image-loading { background:#111 url(../img/progress.gif) no-repeat center center; width:100%; height:100%; }
+#supersized { position:fixed; left:0; top:0; overflow:hidden; z-index:-999; height:100%; width:100%;
+
+  img{ width:auto; height:auto; position:relative; outline:none; border:none; }
+
+  a { z-index:-30; position:fixed; overflow:hidden; top:0; left:0; width:100%; height:100%; background:@back-slider; display:block;
+  	&.image-loading { background:@back-slider url(@progress) no-repeat center center; width:100%; height:100%; }
+  }
+  &.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
+  &.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; } /*Quality*/
+  li { display:block; list-style:none; z-index:-30; position:fixed; overflow:hidden; top:0; left:0; width:100%; height:100%; background:@back-slider;
+  	&.prevslide { z-index:-20; }
+	&.activeslide { z-index:-10; }
+	&.image-loading { background:#111 url(../img/progress.gif) no-repeat center center; width:100%; height:100%; }
+	&.image-loading img{ visibility:hidden; }
+	&.prevslide img,
+	&.activeslide img{ display:inline; }
+
+  }
+  a { width:100%; height:100%; display:block; }
+
+}
